# iSpan_python-NLP-cookbooks

./: .gitignore  20231110_ispn_github_test copy.py  20231110_ispn_github_test.py  COURSE_PLAN.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  pyproject.toml  refactoring_log.md  講義範本.md
.claude/: settings.local.json
00_前置技能/Pytorch/: 02_Pytorch_Tutorial_dataset.ipynb
01_初入新手村/: 01_文字雲(Word Cloud).ipynb  01_詞性標註與命名實體識別.ipynb
01_初入新手村/融會貫通/: jieba-word-tokenizer.ipynb
02_漸入佳境/: 02_詞向量(Word2Vec).ipynb
02_漸入佳境/project/: NLP - TFIDF_recommander_sys.ipynb  NLP - WordEmbedding NN 情緒分析.ipynb
03_懷疑自我/: 04_ANN 推特航空評論情緒分析.ipynb
04_茅舍頓開/: 2.b-LSTM Seq2Seq machine translation.ipynb
04_茅舍頓開/section_1/: classifier_language_recognition-tensor-flow.ipynb
04_茅舍頓開/section_3/: data.ipynb
NLP_advance/: 8.0-using-word-embeddings.ipynb  8.1-jieba-word-tokenizer.ipynb  NLP - LSTM Seq2Seq 機器翻譯.ipynb  NLP - NER 關係抽取.ipynb  NLP - WordEmbedding NN 情緒分析.ipynb
NLP_basic/: 01_文字雲(Word Cloud).ipynb  02_One-Hot Encoding.ipynb  03_主題模型(Topic Model).ipynb  04_ ANN classification demo.ipynb
Pytorch/: 01_Pytorch_Tutorial.ipynb  03_Pytorch_Tutorial_tensorboard.ipynb
Pytorch/basic/: 01_data_type.ipynb  02_data_calculation.ipynb  03_dataloader.ipynb
archived_nlp_materials/: 01_Jieba_中文字預處理.ipynb  01_NLTK_英文字預處理.ipynb  03_潛在語意索引(Latent Semantic Indexing).ipynb  03_簡單貝葉斯分類器(Naive Bayes classifier).ipynb  04_ANN regression demo.ipynb  NLP - LSTM IMDB影評情緒分析.ipynb  NLP - NER 命名實體識別.ipynb  NLP - RNN IMDB影評情緒分析.ipynb  README.md  doc2vec.model  output.txt  overview.ipynb  python_nlp.docx  python_nlp_v2.docx
archived_nlp_materials/statnlpbook/: utils.py
datasets/: .gitignore  README.md
datasets/google_reviews/: BigCity_GoogleComments
datasets/news/: ny_news_en.txt
docs/: 16_wbs_development_plan_template.md  BEST_PRACTICES.md  PROJECT_EXPANSION_COMPLETION_REPORT.md  PROJECT_USAGE_GUIDE.md  TDD_Development_Principles.md  TESTING_REPORT.json
nlp-course/: README.md  requirements.txt
scripts/: check_environment.py  download_datasets.py  test_notebooks.py
shared_resources/punctuation/: punctuation_en.txt  punctuation_zh_tw.txt
shared_resources/stopwords/: stopwords_zh_tw.txt
上課教材基礎/: 02_TF-IDF(Term Frequency-Inverse Document Frequency).ipynb  NLP - NER 關係抽取.ipynb  word2vec.model
上課教材進階/Pytorch/: 02_Pytorch_Tutorial_dataset.ipynb  03_Pytorch_Tutorial_tensorboard.ipynb  Pytorch_Tutorial.ipynb  Pytorch_Tutorial_dataset.ipynb  Pytorch_Tutorial_tensorboard.ipynb
專案實戰/: README.md
專案實戰/主題建模應用/: README.md
教材/: Torch.pptx
(+1004 files in other folders)
