[tool.poetry]
name = "ispan-nlp-cookbooks"
version = "2.3.0"
description = "iSpan Python NLP 速成教案：直通生成式 AI 開發實戰"
authors = ["iSpan NLP Team <nlp@ispan.com>"]
readme = "README.md"
license = "MIT"
keywords = ["nlp", "natural-language-processing", "deep-learning", "transformers", "教學"]

[tool.poetry.dependencies]
python = "^3.9,<3.13"

# Core NLP Libraries
jieba = "^0.42.1"
nltk = "^3.8.1"
spacy = "^3.7.0"
gensim = "^4.3.2"
opencc-python-reimplemented = "^0.1.7"

# Deep Learning Frameworks
tensorflow = "^2.15.0"
keras = "^2.15.0"
torch = "^2.1.0"
torchvision = "^0.16.0"

# Hugging Face Ecosystem
transformers = "^4.35.0"
datasets = "^2.14.0"
tokenizers = "^0.15.0"
accelerate = "^0.24.0"
sentencepiece = "^0.1.99"

# Machine Learning
scikit-learn = "^1.3.2"
scipy = "^1.11.4"

# Data Processing
pandas = "^2.1.3"
numpy = "^1.26.2"

# Visualization
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
wordcloud = "^1.9.3"
plotly = "^5.18.0"

# Text Processing
regex = "^2023.10.3"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"

# Utilities
requests = "^2.31.0"
tqdm = "^4.66.1"
python-dotenv = "^1.0.0"

# Jupyter
ipykernel = "^6.27.0"
jupyter = "^1.0.0"
notebook = "^7.0.6"
ipywidgets = "^8.1.1"

[tool.poetry.group.dev.dependencies]
# Development Tools
black = "^23.11.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.7.1"

# Testing
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

# Documentation
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.14"

[tool.poetry.group.optional.dependencies]
# Optional: Advanced NLP Models (較大型套件，可選安裝)
fasttext = "^0.9.2"
pyLDAvis = "^3.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.mypy_cache
  | \.pytest_cache
  | __pycache__
  | build
  | dist
  | datasets
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=utils",
    "--cov-report=html",
    "--cov-report=term-missing",
    "-v"
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "datasets/",
    "build/",
]

# Poetry Scripts
[tool.poetry.scripts]
download-datasets = "scripts.download_datasets:main"
